--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "^52.0.16",
     "expo-constants": "~17.0.3",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
     "expo-splash-screen": "~0.29.13",
