--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
         }
       ]
     ],
-    "name": "guess-number",
-    "slug": "guess-number"
+    "name": "guess-the-number",
+    "slug": "guess-the-number"
   }
 }
