--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "expo": "^52.0.16",
+    "expo-app-loading": "^2.1.1",
     "expo-constants": "~17.0.3",
+    "expo-font": "^13.0.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
